# rust_web_server

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
app/: Cargo.toml  README.md  rustfmt.toml
app/src/: main.rs
app/src/common/: mod.rs
app/src/common/config/: config.rs
app/src/common/database/: connection.rs
app/src/common/database/db_entity/: users.rs
app/src/common/database/migration/src/: lib.rs  m20240214_171255_user_table.rs
app/src/infrastructure/repository/: user_repository.rs
app/src/presentation/controllers/: user_controller.rs
app/src/presentation/routers/: mod.rs  store_api.rs  user_api.rs
app/src/usecase/: login.rs
src/: main.rs
src/common/config/: config.rs
src/common/database/: connection.rs  mod.rs
src/common/database/db_entity/: prelude.rs  users.rs
src/common/database/migration/src/: lib.rs  m20240214_171255_user_table.rs  m20240214_171255_user_table_2.rs
src/infrastructure/repository/: user_repository.rs
src/presentation/controllers/: user_controller.rs
src/presentation/routers/: mod.rs  router.rs  user_api.rs
src/usecase/: login.rs
