[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
tower = "*"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde="*"
serde_derive = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }